Add new features (TemporalGeometry Query Resources: Distance and Velocity)
